Replace Department with DepartmentForm in mvc